# waystone

./: .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.sim.json  vite.config.ts  vite.config.ts.timestamp-1713908677917.mjs
build-utils/: importReplacer.cjs  importReplacer.ts
sim-dist/: const.js
sim-dist/bechamel/: GameState.js  StrategyConnector.js  common.js  const.js
sim-dist/containedEngine/: containedEngine.js  utils.js
sim-dist/reducers/: utils.js
src/: App.css  App.tsx  addAnimations.ts  clientProtocol.ts  const.js  const.ts  game.js  main.tsx  style.css  types.ts  utils.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/actions/: index.ts
src/assets/: game.css  style.css
src/bechamel/: DragonlandService.ts  GameConnector.ts  GameState.ts  StrategyConnector.ts  WorkerStrategyConnector.ts  bechamel.ts  common.js  common.ts  const.ts  types.ts
src/components/: ActionCardView.jsx  App.tsx  Card.tsx  CardAbilities.jsx  CardAbilities.tsx  CardEnergyManipulation.jsx  CardView.jsx  CreaturePowerIcon.jsx  DeckSelector.jsx  EndgameOverlay.jsx  MagiPowerIcon.jsx  StepBoard.jsx  common.js  common.ts  gsapAnimations.ts  helpers.ts  style.css  tauriUtils.ts
src/containedEngine/: containedEngine.js  containedEngine.ts  utils.js  utils.ts
src/epics/: index.js  turnTimerEpic.js
src/reducers/: applyEffect.ts  index.ts  reducer.ts  utils.js  utils.ts
src/selectors/: index.ts
src/services/: ChallengesService.ts  (+6 more)
(+140 files in other folders)
